[gd_scene load_steps=8 format=3 uid="uid://wvb1kyxrajvi"]

[ext_resource type="PackedScene" uid="uid://2pyds7hom2cf" path="res://ui/mixer.tscn" id="1_ebuj0"]
[ext_resource type="Script" path="res://ui/station_buttons.gd" id="2_3lymi"]
[ext_resource type="FontFile" uid="uid://d2m6ghn0q8df3" path="res://ui/Comic Sans MS.ttf" id="3_474f3"]

[sub_resource type="Theme" id="Theme_l7xr0"]
default_font = ExtResource("3_474f3")

[sub_resource type="Theme" id="Theme_ih8i6"]
default_font = ExtResource("3_474f3")

[sub_resource type="Theme" id="Theme_2ocjw"]
default_font = ExtResource("3_474f3")

[sub_resource type="Theme" id="Theme_m64qu"]
default_font = ExtResource("3_474f3")

[node name="UI" type="Node2D"]

[node name="Mixers" type="Node2D" parent="."]

[node name="Mixer3" parent="Mixers" instance=ExtResource("1_ebuj0")]
position = Vector2(411, 576)

[node name="Mixer2" parent="Mixers" instance=ExtResource("1_ebuj0")]
position = Vector2(678, 575)

[node name="Mixer" parent="Mixers" instance=ExtResource("1_ebuj0")]
position = Vector2(90, 576)

[node name="Orders" type="Node2D" parent="."]

[node name="StationButtons" type="Node2D" parent="."]
script = ExtResource("2_3lymi")

[node name="HBoxContainer2" type="HBoxContainer" parent="StationButtons"]
offset_right = 252.0
offset_bottom = 31.0

[node name="PluckBallsButton" type="Button" parent="StationButtons/HBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_l7xr0")
text = "Pluck"

[node name="HeadshapeButton" type="Button" parent="StationButtons/HBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_ih8i6")
text = "Head Shape"

[node name="GrowEyesButton" type="Button" parent="StationButtons/HBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_2ocjw")
text = "Grow Eyes"

[node name="CutBodyButton" type="Button" parent="StationButtons/HBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_m64qu")
text = "Cut Body"

[connection signal="pressed" from="StationButtons/HBoxContainer2/PluckBallsButton" to="StationButtons" method="_on_pluck_balls_button_pressed"]
[connection signal="pressed" from="StationButtons/HBoxContainer2/HeadshapeButton" to="StationButtons" method="_on_headshape_button_pressed"]
[connection signal="pressed" from="StationButtons/HBoxContainer2/GrowEyesButton" to="StationButtons" method="_on_grow_eyes_button_pressed"]
[connection signal="pressed" from="StationButtons/HBoxContainer2/CutBodyButton" to="StationButtons" method="_on_cut_body_button_pressed"]
